--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
+#root {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.box {
+  margin-top: 4rem;
+  border: solid black 1px;
+  background-color: whitesmoke;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  margin-top: 20px;
+  padding: 20px;
+
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  text-decoration: underline;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  margin-left: 5px;
+  background-color: cornflowerblue;
+  margin-bottom: 10px;
+}
+
+input {
+  margin-bottom: 10px;
+}
+
+li {
+  border: solid rgb(20, 0, 17) 1px;
+  margin-right: 10px;
+  background-color: antiquewhite;
+  text-align: left;
 }
